First commited as before_47073_rev1